Fix: The timeline broke my website on smaller devices, fixed by adding a media break for anything under 815px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@
 .section-column {
     display: table-cell;
     float: none;
-    margin: 
+    padding: 0 auto; 
 }
 
 /* ---------------------------------------------------------- Start Page */
@@ -221,39 +221,6 @@ button a:hover {
     display: none;
 }
 
-/* .skill-box-container {
-    display: inline-block;
-    position: relative;
-    margin: 60px;
-}
-
-.skill-box {
-    height: 80px;
-    width: 80px;
-    background-color: #b30086;
-    margin: 0;
-    border: 1px transparent;
-    border-radius: 50%;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    
-}
-
-.skill-box i {
-    font-size: 35px;
-    color: #fff;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-}
-
-.skill-box-text {
-
-} */
-
 /* ---------------------------------------------------------- My Work History */
 
 .timeline-content {
@@ -262,7 +229,6 @@ button a:hover {
     position: relative;
     color: #262626;
     border-left: 1px solid;
-    left: 35%;
 }
 
 .timeline-content p {
@@ -371,6 +337,9 @@ h6 {
     }
     .navbar-nav {
         font-size: 25px;
+    }
+    .timeline-content {
+        left: 37.5%;
     }
 }
 
